objects/Customer_Profile__c.object
<CustomObject>
    <fields>
        <fullName>Account_Alias_DBA__c</fullName>
        <description>DBA or Nickname for the Account</description>
        <inlineHelpText>DBA or Nickname for the Account</inlineHelpText>
        <label>Account Alias (DBA)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Application__c</fullName>
        <label>Application</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Commodities_Hauled__c</fullName>
        <label>Commodities Hauled</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Customer_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Customer Account</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordType.Name</field>
                <operation>equals</operation>
                <value>Customer</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Customer Profiles</relationshipLabel>
        <relationshipName>Customer_Profiles</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Daycab__c</fullName>
        <label>% Daycab</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Dealer_Account__c</fullName>
        <label>Dealer Account</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordType.Name</field>
                <operation>equals</operation>
                <value>Dealer</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Customer Profiles (Dealer Account)</relationshipLabel>
        <relationshipName>Customer_Profiles1</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>External_Id__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>FE_Current__c</fullName>
        <label>FE Current</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FE_Goal__c</fullName>
        <label>FE Goal</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Key_Account__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Key Account</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Logged_In_User_Matching_Dealer_Code__c</fullName>
        <formula>Dealer_Account__r.Dealer_Code__c  = $User.Dealer_Code__c</formula>
        <label>Logged In User Matching Dealer Code?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Miles_Driven__c</fullName>
        <label>Miles Driven</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Potential_Volume__c</fullName>
        <label>Potential Volume</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Primary_Make__c</fullName>
        <label>Primary Make</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>RSL_Cruise__c</fullName>
        <label>RSL Cruise</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RSL_Pedal__c</fullName>
        <label>RSL Pedal</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Repair_shop_owned__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Repair shop owned?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sales_Target_Account__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sales Target Account</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Secondary_Make__c</fullName>
        <label>Secondary Make</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Segment__c</fullName>
        <label>Segment</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>CST &gt;10L</fullName>
                </value>
                <value>
                    <fullName>CST &lt;10L</fullName>
                </value>
                <value>
                    <fullName>LH</fullName>
                </value>
                <value>
                    <fullName>LCOE</fullName>
                </value>
                <value>
                    <fullName>RH</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sleeper__c</fullName>
        <label>% Sleeper</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Trade_Cycle__c</fullName>
        <label>Trade Cycle</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Trades__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Trades</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Trailer_Types__c</fullName>
        <label>Trailer Types</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Trailers__c</fullName>
        <label>Trailers</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Drop Deck</fullName>
                </value>
                <value>
                    <fullName>Enclosed Car Carrier</fullName>
                </value>
                <value>
                    <fullName>End Dump</fullName>
                </value>
                <value>
                    <fullName>Flatbed</fullName>
                </value>
                <value>
                    <fullName>Lowboy</fullName>
                </value>
                <value>
                    <fullName>Reefer</fullName>
                </value>
                <value>
                    <fullName>Specialty</fullName>
                </value>
                <value>
                    <fullName>Van</fullName>
                </value>
                <value>
                    <fullName>Walking Floor</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Truck_Body__c</fullName>
        <label>Truck Body</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Concrete Pumper</fullName>
                </value>
                <value>
                    <fullName>Crane</fullName>
                </value>
                <value>
                    <fullName>Dump</fullName>
                </value>
                <value>
                    <fullName>Refuse</fullName>
                </value>
                <value>
                    <fullName>Tow</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Vocation_1__c</fullName>
        <label>Vocation 1</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Agriculture / Farm</fullName>
                </value>
                <value>
                    <fullName>Beverage Processing &amp; Distribution</fullName>
                </value>
                <value>
                    <fullName>Bus Transporation</fullName>
                </value>
                <value>
                    <fullName>Construction</fullName>
                </value>
                <value>
                    <fullName>Dealer</fullName>
                </value>
                <value>
                    <fullName>Emergency Vehicles</fullName>
                </value>
                <value>
                    <fullName>Food Processing &amp; Distribution</fullName>
                </value>
                <value>
                    <fullName>Forestry / Lumber Products</fullName>
                </value>
                <value>
                    <fullName>General Freight</fullName>
                </value>
                <value>
                    <fullName>General Freight / Hazardous Materials</fullName>
                </value>
                <value>
                    <fullName>Government / Miscellaneous</fullName>
                </value>
                <value>
                    <fullName>Hazardous Materials</fullName>
                </value>
                <value>
                    <fullName>Individual</fullName>
                </value>
                <value>
                    <fullName>Landscaping / Horticulture</fullName>
                </value>
                <value>
                    <fullName>Lease / Finance</fullName>
                </value>
                <value>
                    <fullName>Lease / Manufacturer Sponsored</fullName>
                </value>
                <value>
                    <fullName>Lease / Rental</fullName>
                </value>
                <value>
                    <fullName>Manufacturing</fullName>
                </value>
                <value>
                    <fullName>Mining / Quarring</fullName>
                </value>
                <value>
                    <fullName>Miscellaneous</fullName>
                </value>
                <value>
                    <fullName>Moving And Storage</fullName>
                </value>
                <value>
                    <fullName>Petroleum</fullName>
                </value>
                <value>
                    <fullName>Petroleum / Hazardous Materials</fullName>
                </value>
                <value>
                    <fullName>Road / Highway Maintenance</fullName>
                </value>
                <value>
                    <fullName>Sanitation / Hazardous Materials</fullName>
                </value>
                <value>
                    <fullName>Sanitation / Refuse</fullName>
                </value>
                <value>
                    <fullName>SERVICES</fullName>
                    <label>Services</label>
                </value>
                <value>
                    <fullName>Specialized / Heavy Hauling</fullName>
                </value>
                <value>
                    <fullName>Unclassified</fullName>
                </value>
                <value>
                    <fullName>Utility Services</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Vocation_2__c</fullName>
        <label>Vocation 2</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Agriculture / Farm</fullName>
                </value>
                <value>
                    <fullName>Beverage Processing &amp; Distribution</fullName>
                </value>
                <value>
                    <fullName>Bus Transporation</fullName>
                </value>
                <value>
                    <fullName>Construction</fullName>
                </value>
                <value>
                    <fullName>Dealer</fullName>
                </value>
                <value>
                    <fullName>Emergency Vehicles</fullName>
                </value>
                <value>
                    <fullName>Food Processing &amp; Distribution</fullName>
                </value>
                <value>
                    <fullName>Forestry / Lumber Products</fullName>
                </value>
                <value>
                    <fullName>General Freight</fullName>
                </value>
                <value>
                    <fullName>General Freight / Hazardous Materials</fullName>
                </value>
                <value>
                    <fullName>Government / Miscellaneous</fullName>
                </value>
                <value>
                    <fullName>Hazardous Materials</fullName>
                </value>
                <value>
                    <fullName>Individual</fullName>
                </value>
                <value>
                    <fullName>Landscaping / Horticulture</fullName>
                </value>
                <value>
                    <fullName>Lease / Finance</fullName>
                </value>
                <value>
                    <fullName>Lease / Manufacturer Sponsored</fullName>
                </value>
                <value>
                    <fullName>Lease / Rental</fullName>
                </value>
                <value>
                    <fullName>Manufacturing</fullName>
                </value>
                <value>
                    <fullName>Mining / Quarring</fullName>
                </value>
                <value>
                    <fullName>Miscellaneous</fullName>
                </value>
                <value>
                    <fullName>Moving And Storage</fullName>
                </value>
                <value>
                    <fullName>Petroleum</fullName>
                </value>
                <value>
                    <fullName>Petroleum / Hazardous Materials</fullName>
                </value>
                <value>
                    <fullName>Road / Highway Maintenance</fullName>
                </value>
                <value>
                    <fullName>Sanitation / Hazardous Materials</fullName>
                </value>
                <value>
                    <fullName>Sanitation / Refuse</fullName>
                </value>
                <value>
                    <fullName>SERVICES</fullName>
                </value>
                <value>
                    <fullName>Specialized / Heavy Hauling</fullName>
                </value>
                <value>
                    <fullName>Unclassified</fullName>
                </value>
                <value>
                    <fullName>Utility Services</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Warranty_Coverage__c</fullName>
        <label>Warranty Coverage</label>
        <type>TextArea</type>
    </fields>
    <label>Customer Profile</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>My_Customer_Profiles</fullName>
        <columns>NAME</columns>
        <columns>Application__c</columns>
        <columns>Commodities_Hauled__c</columns>
        <columns>FE_Current__c</columns>
        <columns>FE_Goal__c</columns>
        <columns>Key_Account__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>Logged_In_User_Matching_Dealer_Code__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>My Customer Profiles</label>
    </listViews>
    <nameField>
        <displayFormat>CP-{000000}</displayFormat>
        <label>Customer Profile Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Customer Profiles</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>